# memex

./: .coderabbit.yaml  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: INDEX.md  architecture.md  overview.md
scripts/: build-release.sh  memex_entry.py  memex_sync_entry.py
src/memex/: __init__.py  artifacts.py  cli.py  compiled.py  config.py  engine.py  facets.py  health.py  hybrid.py  lexical.py  planner.py  recall.py  registry.py  semantic.py  telemetry.py  tokenize.py
src/memex/indexing/: __init__.py  cli.py  compile.py  doctor.py  frontmatter.py  integrity.py  pipeline.py  qdrant.py  report.py  scan.py  sync.py
tests/: test_central_read.py  test_cli.py  test_compiled_prune.py  test_config.py  test_doctor.py  test_facets.py  test_health.py  test_hybrid.py  test_hybrid_kind_prior.py  test_indexing.py  test_integrity.py  test_legacy_mark.py  test_lexical.py  test_planner.py  test_qdrant_client.py  test_qdrant_integration.py  test_recall.py  test_semantic.py  test_sync.py  test_telemetry.py  test_tokenize.py
